# mpop

./: .gitignore  ABOUT-NLS  AUTHORS  ChangeLog  ChangeLog.old  INSTALL  Makefile.am  NEWS  NOTES  README  README.dos  README.w32  README.win32  THANKS  configure.ac
doc/: .cvsignore  Makefile.am  mpop.1  mpop.texi  mpopd.1  mpoprc.example
gnulib/: .cvsignore  Makefile.am  fsync.c  gettimeofday.c  gettimeofday.h  link.c  nanosleep.h  printf-parse.c  string.in.h  sys_stat.in.h  sys_wait.in.h  unistd.in.h  vasnprintf.c  vasnprintf.h
gnulib/m4/: .cvsignore  gettimeofday.m4  gnulib-cache.m4  gnulib-comp.m4
po/: LINGUAS  POTFILES.in  de.po  eo.po  es.po  fr.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  ta.po  uk.po
scripts/: Makefile.am
scripts/mpop-gnome-tool/: README
scripts/vim/: README  mpop.vim
src/: .cvsignore  Makefile.am  conf.c  conf.h  delivery.c  delivery.h  mpop.c  mpopd.c  net.c  os_env.c  os_env.h  pop3.c  pop3.h  tls.c  tools.c  tools.h  uidls.c  uidls.h
